<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fff">

    <wael.emy.bubblenavigationrtl.BubbleNavigationConstraintView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        app:bnc_mode="packed">

        <wael.emy.bubblenavigationrtl.BubbleToggleView
            android:id="@+id/l_item_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="#f95563"
            app:bt_colorInactive="#000000"
            app:bt_icon="@drawable/ic_more"
            app:bt_title="@string/more"
            app:bt_shape="@drawable/transition_background"/>

        <wael.emy.bubblenavigationrtl.BubbleToggleView
            android:id="@+id/l_item_profile_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="#f95563"
            app:bt_colorInactive="#000000"
            app:bt_icon="@drawable/ic_my_books"
            app:bt_title="@string/my_books"
            app:bt_shape="@drawable/transition_background"/>

        <wael.emy.bubblenavigationrtl.BubbleToggleView
            android:id="@+id/l_item_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="#f95563"
            app:bt_colorInactive="#000000"
            app:bt_icon="@drawable/ic_search"
            app:bt_title="@string/search"
            app:bt_shape="@drawable/transition_background"/>

        <wael.emy.bubblenavigationrtl.BubbleToggleView
            android:id="@+id/l_item_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="#f95563"
            app:bt_colorInactive="#000000"
            app:bt_icon="@drawable/ic_home"
            app:bt_title="@string/home"
            app:bt_badgeTextSize="10dp"
            app:bt_shape="@drawable/transition_background"
            app:bt_active="true" />
    </wael.emy.bubblenavigationrtl.BubbleNavigationConstraintView>

</LinearLayout>